# pydantic-file-settings

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/pydantic_file_settings/: __init__.py
tests/: test_file_settings.py
