[project]
name = "pydantic-file-settings"
version = "0.0.1"
description = "Manage your application settings with Pydantic models, storing them in JSON file."
authors = [
    { name = "Ruslan Iskov", email = "ruslan.rv.ua@gmail.com" }
]
license = "MIT"
readme = "README.md"
dependencies = [
    "pydantic-settings>=2.3.4",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_file_settings"]
