[project]
name = "pydantic-file-settings"
version = "0.0.1"
description = "Manage your application settings with Pydantic models, storing them in JSON file."
authors = [{ name = "Ruslan Iskov", email = "ruslan.rv.ua@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.8"
keywords = [
    "pydantic",
    "settings",
    "configuration",
    "json",
    "file-based",
    "file",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic-settings>=2.8.1",
]

[project.urls]
Homepage = "https://github.com/ruslan-rv-ua/pydantic-file-settings"
Documentation = "https://github.com/ruslan-rv-ua/pydantic-file-settings#readme"
Repository = "https://github.com/ruslan-rv-ua/pydantic-file-settings.git"
"Bug Tracker" = "https://github.com/ruslan-rv-ua/pydantic-file-settings/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_file_settings"]


[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
    "/.gitignore",
    "/.pre-commit-config.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
